<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jaspreet.worldwidelive.viewcontrollers.fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textView_height"
            android:background="@color/colorPrimary"
            android:gravity="center|left"
            android:text="@string/wwl"
            android:textColor="@color/white"
            android:textSize="@dimen/text_header_size"
            android:textStyle="italic|bold" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/userBtn"
            android:layout_width="@dimen/textView_height"
            android:layout_height="@dimen/textView_height"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:src="@drawable/ic_person_black_24dp"
            android:tint="@color/white" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/mView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar"
        android:layout_below="@+id/topBar"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_photo"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profilePhoto"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_marginTop="@dimen/fab_margin"
                android:src="@drawable/ic_person_black_24dp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bio"
                android:textSize="@dimen/text_size" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/boiText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bio_text_height"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:textSize="@dimen/text_size" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/mLogoutButton"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#FCA2A2"
            android:drawableStart="@mipmap/logout"
            android:padding="5dp"
            android:text="@string/logout"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mCancelButton"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mSaveButton"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
