<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.jaspreet.worldwidelive.viewcontrollers.MainActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/textView_height"
            android:background="@color/colorPrimary"
            android:gravity="center|left"
            android:text="@string/wwl"
            android:textColor="@color/white"
            android:textSize="@dimen/text_header_size"
            android:textStyle="italic|bold" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/logOutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:tint="@color/white"
            android:src="@mipmap/logout" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/mView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/news_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/mWatchNewsButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watch_news"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mReportNewsButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/report_news"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
